@startuml

title __SRC's Class Diagram__\n


    class ChildrenPrice {
        ~ getCharge()
        ~ getPricedCode()
    }
  


    class Customer {
        - name : String
        - rentals : List<Rental>
        + Customer()
        + addRental()
        + getName()
        + htmlStatement()
        + statement()
        - getAmountFor()
        - getTotalCharge()
        - getTotalFrequentRenterPoints()
    }

  


    class Movie {
        {static} + CHILDREN : int
        {static} + NEW_RELEASE : int
        {static} + REGULAR : int
        - title : String
        + Movie()
        + getPriceCode()
        + getTitle()
        ~ getCharge()
        ~ getFrequentRenterPoints()
        - setPriceCode()
    }

  

    class NewReleasePrice {
        ~ getCharge()
        ~ getPricedCode()
        ~ getTotalFrequentRenterPoints()
    }

  


    abstract class Price {
        {abstract} ~ getCharge()
        {abstract} ~ getPricedCode()
        ~ getTotalFrequentRenterPoints()
    }

  


    class RegularPrice {
        ~ getCharge()
        ~ getPricedCode()
    }

  


    class Rental {
        - daysRented : int
        + Rental()
        + getDaysRented()
        + getMovie()
        ~ calculatePoints()
        ~ getRentalPrice()
    }
  

  Customer "1" -> "*" Rental : rental
  Rental "*" o-- "1" Movie : movie
  Movie "*" o-- "1" Price : price
  ChildrenPrice -up-|> Price
  NewReleasePrice -up-|> Price
  RegularPrice -up-|> Price


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
